# fly-in

./: .gitignore  Makefile  README.md  diff.out  fly_in.py  pyproject.toml
.github/workflows/: ci.yml
flyin/: arguments.py  logging.py  renderer.py  solver.py
flyin/exceptions/: base.py  graph.py  hub.py  loader.py  parser.py  solver.py
flyin/io/: file_loader.py  parser.py
flyin/models/: graph.py  hub.py  link.py
flyin/renderer/: camera.py  constants.py  hud.py  view.py  window.py
flyin/renderer/objects/: hub.py  link.py
flyin/renderer/views/: editor_view.py
flyin/solver/: dist_table.py  lacam.py  pibt.py  types.py  utils.py
flyin/ui/: bus_events.py  constants.py  helpers.py  window.py
flyin/ui/items/: agent_item.py  hub_item.py  link_item.py
flyin/ui/overlays/: map_info_overlay.py
flyin/ui/scenes/: map_scene.py
flyin/ui/views/: map_view.py
flyin/ui/views/editor/: editor_view.py
flyin/ui/views/editor/overlays/: map_details_overlay.py
flyin/ui/views/editor/scenes/: map_scene.py
flyin/ui/widgets/: header_widget.py  hud_widget.py  infobar_widget.py
srcs/: arguments.py  logging.py
tests/: test_arguments.py
tests/io/: test_file_loader.py  test_parser.py
tests/models/: test_graph.py  test_hub.py  test_link.py
