[tool.poetry]
name = "fly-in"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "1.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "1.19.1"
flake8 = "7.3.0"

[[tool.mypy.overrides]]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

