[tool.poetry]
name = "fly-in"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "2.12.5"
typing-extensions = "4.15.0"
PyQt6 = "6.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "1.19.1"
flake8 = "7.3.0"
pytest = "9.0.2"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

[tool.flake8]
exclude = [
	"tests"
]

[tool.mypy]
exclude = [
	"tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

